company logos added

--- a/index.html
+++ b/index.html
@@ -122,13 +122,13 @@
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <script>
         const locations = [
-            { name: "OnsMaster", type: "Kripto", phone: "+90 555 111 2233", lat: 40.993773487659006, lng: 29.11872524969884, icon: "http://cgdemo.omgteknoloji.com/assets/img/firma/sirket-bunyesi-firma/4.png" },
-            { name: "Hakan Altın", type: "Kuyumcu", phone: "+90 212 333 4455", lat: 41.010261, lng: 28.972146, icon: "http://cgdemo.omgteknoloji.com/assets/img/firma/sirket-bunyesi-firma/6.png" },
-            { name: "Çakmakçı Döviz", type: "Döviz", phone: "+90 216 444 5566", lat: 40.924336, lng: 29.131685, icon: "http://cgdemo.omgteknoloji.com/assets/img/firma/sirket-bunyesi-firma/5.png" },
-            { name: "Rauf Denktaş Üniversitesi", type: "Üniversite", phone: "+90 392 888 9900", lat: 35.1782146, lng: 33.3624368, icon: "http://cgdemo.omgteknoloji.com/assets/img/firma/sirket-bunyesi-firma/13.png" },
-            { name: "Hakan Döviz", type: "Döviz", phone: "+90 216 333 7788", lat: 40.9799927, lng: 29.1103281, icon: "http://cgdemo.omgteknoloji.com/assets/img/firma/sirket-bunyesi-firma/7.png" },
-            { name: "As Kuyumculuk", type: "Kuyumcu", phone: "+90 212 555 8899", lat: 40.9799667, lng: 29.1080646, icon: "http://cgdemo.omgteknoloji.com/assets/img/firma/sirket-bunyesi-firma/2.png" },
-            { name: "DNA İstanbul Döviz", type: "Döviz", phone: "+90 212 666 7788", lat: 41.010258, lng: 28.972142, icon: "http://cgdemo.omgteknoloji.com/assets/img/firma/sirket-bunyesi-firma/8.png" },
+            { name: "OnsMaster", type: "Kripto", phone: "+90 555 111 2233", lat: 40.993773487659006, lng: 29.11872524969884, icon: "./images/4.png" },
+            { name: "Hakan Altın", type: "Kuyumcu", phone: "+90 212 333 4455", lat: 41.010261, lng: 28.972146, icon: "./images/6.png" },
+            { name: "Çakmakçı Döviz", type: "Döviz", phone: "+90 216 444 5566", lat: 40.924336, lng: 29.131685, icon: "./images/5.png" },
+            { name: "Rauf Denktaş Üniversitesi", type: "Üniversite", phone: "+90 392 888 9900", lat: 35.1782146, lng: 33.3624368, icon: "./images/13.png" },
+            { name: "Hakan Döviz", type: "Döviz", phone: "+90 216 333 7788", lat: 40.9799927, lng: 29.1103281, icon: "./images/7.png" },
+            { name: "As Kuyumculuk", type: "Kuyumcu", phone: "+90 212 555 8899", lat: 40.9799667, lng: 29.1080646, icon: "./images/2.png" },
+            { name: "DNA İstanbul Döviz", type: "Döviz", phone: "+90 212 666 7788", lat: 41.010258, lng: 28.972142, icon: "./images/8.png" },
         ];
 
         const map = L.map('map').setView([41.0082, 28.9784], 13);
